--- a/wilde.css
+++ b/wilde.css
@@ -27,3 +27,32 @@ p.stage-direction{
    .SIR_ROBERT_CHILTERN{
        color: rgb(235, 198, 34);
    }
+   table{
+    border: solid;
+    padding: 40px 40px 40px;
+    margin: 80px 80px;
+    width: 80%; 
+  }
+  th{
+    color:rgb(36, 9, 9);
+    border: 1px solid black;
+    padding: 5px 5px 5px;
+    text-align: left;
+    background-color:rgb(135, 189, 206);
+
+  }
+  td{
+    color: rgb(44, 39, 39);
+    padding: 3px 3px 3px;
+    border: 1px mixed black;
+    text-align: left;
+  }
+  tr:nth-child(even){
+    background-color: rgb(33, 137, 182);
+  }
+  .name:hover{
+    text-shadow: 2px 4px 3px rgb(80, 207, 75);
+    color: #6ae99f;
+    filter: blue(3px);
+    border: solid 2px rgb(15, 15, 15);
+  }
