--- a/wilde.css
+++ b/wilde.css
@@ -56,3 +56,29 @@ p.stage-direction{
     filter: blue(3px);
     border: solid 2px rgb(15, 15, 15);
   }
+  ul.navbar-horizontal{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: block;
+    background-color: violet;
+}
+
+li{
+    float:left;
+}
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active){
+    background-color: darkorange;
+}
+.active{
+    background-color: deeppink;
+}
